force-app/main/default/objects/BMCServiceDesk__Task__c/BMCServiceDesk__Task__c.object-meta.xml
<CustomObject>
    <customHelpPage>BMCServiceDesk__StdFormHelpTask</customHelpPage>
    <description>This object allows you to store data for tasks.</description>
    <label>Task</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Task #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>