force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__ACDeviceID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ACDeviceID__c</fullName>
    <description>Device ID for the BCM Device</description>
    <label>BCM Device ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>