force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__ACExecute__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ACExecute__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the AssetCore Operational Rule should be deployed automatically</description>
    <label>BCM Execute</label>
    <type>Checkbox</type>
</CustomField>