force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__ACRequiresApproval__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ACRequiresApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BCM Requires Approval</label>
    <type>Checkbox</type>
</CustomField>