force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__busAssessment__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__busAssessment__c</fullName>
    <label>Bus Assessment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>