force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Client_First_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_First_Name__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is automatically set to the first name of the client who submitted the task.</inlineHelpText>
    <label>First Name</label>
    <type>Text</type>
</CustomField>