force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_Last_Name__c</fullName>
    <formula>BMCServiceDesk__FKClient__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select the last name of the client who is submitting the task.</inlineHelpText>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>