force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Closed_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Closed_By__c</fullName>
    <formula>BMCServiceDesk__FKClosedBy__r.Username</formula>
    <inlineHelpText>This field is automatically set to the Staff ID of the currently logged-on staff. If required, you can use this field to select a different staff from the currently logged-on staff.</inlineHelpText>
    <label>Closed By~</label>
    <type>Text</type>
</CustomField>