force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__closedProfile__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__closedProfile__c</fullName>
    <label>Closed Profile</label>
    <length>50</length>
    <type>Text</type>
</CustomField>