force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__comments__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__comments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>