force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__contactType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__contactType__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Walkup</fullName>
            </value>
            <value>
                <fullName>Mail Listen</fullName>
            </value>
            <value>
                <fullName>Email Other</fullName>
            </value>
            <value>
                <fullName>Self Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>