force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__costEstimate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__costEstimate__c</fullName>
    <label>Cost Estimate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>