force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__DisplayInSS__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DisplayInSS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in Self Service</label>
    <type>Checkbox</type>
</CustomField>