force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Dummy_Update__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Dummy_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag toggles if there is a dummy update on Task record.</description>
    <label>Workflow Controller</label>
    <type>Checkbox</type>
</CustomField>