force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>