force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__eMailOriginator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__eMailOriginator__c</fullName>
    <label>EMail Originator</label>
    <length>510</length>
    <type>LongTextArea</type>
</CustomField>