force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__endDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__endDate__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>