force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__ExistsInManifest__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ExistsInManifest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used for programmatic purpose.</description>
    <inlineHelpText>This checkbox is used for programmatic purpose.</inlineHelpText>
    <label>ExistsInManifest</label>
    <type>Checkbox</type>
</CustomField>