force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__FKChange__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKChange__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Request</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Change_Request__c.BMCServiceDesk__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active change request</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Change_Request__c</referenceTo>
    <relationshipLabel>Linked Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>