force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__FKClient__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKClient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the client for this record.</inlineHelpText>
    <label>Client ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>