force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__FKContact__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>