force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__FKIncident__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKIncident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>BMCServiceDesk__Incident__c.BMCServiceDesk__inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <infoMessage>Select an active incident.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>BMCServiceDesk__Incident__c</referenceTo>
    <relationshipLabel>Linked Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>