force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__FKLead__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>