force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__FKOpenBy__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKOpenBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the staff to whom you want to assign the record.</inlineHelpText>
    <label>Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.BMCServiceDesk__IsStaffUser__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>