force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Launch_console__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Launch_console__c</fullName>
    <formula>HYPERLINK(&quot;/apex/BMCServiceDesk__ConsoleRedirect?formulaFieldName=TaskLaunchConsole&amp;recordName=&quot;+Name+&quot;&amp;recordId=&quot;+Id+&quot;&amp;isdtp=vw&amp;uiTheme=&quot;+$User.UIThemeDisplayed+&quot;&amp;formLayoutId=&quot;+ CASESAFEID(BMCServiceDesk__RF_FKLayout__c), Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record will be opened either in Task Console or in Remedyforce Console tab</inlineHelpText>
    <label>Launch Console</label>
    <type>Text</type>
</CustomField>