force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__note__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__note__c</fullName>
    <label>Note</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>