force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__openDateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__openDateTime__c</fullName>
    <inlineHelpText>This field is automatically set to the date and time at which the task was created.</inlineHelpText>
    <label>Opened Date</label>
    <type>DateTime</type>
</CustomField>