force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__processTemplateOrder__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__processTemplateOrder__c</fullName>
    <label>Process Template Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>