force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__recommendations__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__recommendations__c</fullName>
    <label>Recommendations</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>