force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Recurrence__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Recurrence__c</fullName>
    <label>Recurrence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>