force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Scheduled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Scheduled_End_Date__c</fullName>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>