force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Service_Request_Process__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Request_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Request Process</label>
    <type>Checkbox</type>
</CustomField>