force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__startDate__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__startDate__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>