force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__taskResolution__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__taskResolution__c</fullName>
    <inlineHelpText>Use this field to specify what has been done to complete the task. Provide detailed steps taken to complete the task or describe why the task cannot be completed.</inlineHelpText>
    <label>Resolution</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>