force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__techAssessment__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__techAssessment__c</fullName>
    <label>Tech Assessment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>