force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__TemplateName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__TemplateName__c</fullName>
    <label>Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>