force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__timeSpent__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__timeSpent__c</fullName>
    <label>Time Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>