force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Total_Duration__c</fullName>
    <label>Total Duration (minutes)</label>
    <summarizedField>BMCServiceDesk__TaskHistory__c.BMCServiceDesk__Action_Duration__c</summarizedField>
    <summaryForeignKey>BMCServiceDesk__TaskHistory__c.BMCServiceDesk__FKWO__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>