force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__UpdateCount__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__UpdateCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field can be used in workflows to increment the count when a new record is added to the Task History.</description>
    <label>Record Update Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>