force-app/main/default/objects/BMCServiceDesk__Task__c/fields/BMCServiceDesk__Urgency_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Urgency_ID__c</fullName>
    <formula>BMCServiceDesk__FKUrgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the list of options, select how quickly the task needs to be completed. The urgency and the level of impact are used to calculate the priority of the task.</inlineHelpText>
    <label>Urgency~</label>
    <type>Text</type>
</CustomField>