force-app/main/default/objects/BMCServiceDesk__Task__c/recordTypes/BMCServiceDesk__Approver.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__Approver</fullName>
    <active>true</active>
    <label>Approver</label>
</RecordType>