force-app/main/default/objects/BMCServiceDesk__Task__c/recordTypes/BMCServiceDesk__Assessor.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__Assessor</fullName>
    <active>true</active>
    <label>Assessor</label>
</RecordType>