force-app/main/default/objects/BMCServiceDesk__Task__c/recordTypes/BMCServiceDesk__Tasks.recordType-meta.xml
<RecordType>
    <fullName>BMCServiceDesk__Tasks</fullName>
    <active>true</active>
    <label>Tasks</label>
</RecordType>