force-app/main/default/objects/BMCServiceDesk__Task__c/validationRules/BMCServiceDesk__Cannot_Update_Closed_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Cannot_Update_Closed_Task</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISCHANGED(BMCServiceDesk__RF_HasAttachments__c)), NOT(BMCServiceDesk__state__c ), NOT( PRIORVALUE(BMCServiceDesk__state__c)), NOT(ISCHANGED( BMCServiceDesk__Total_Duration__c ) ) , NOT( ISNEW( )), NOT(  AND( ISCHANGED(BMCServiceDesk__dueDateTime__c), NOT(BMCServiceDesk__state__c), (LastModifiedDate - BMCServiceDesk__closeDateTime__c) &lt; 0.0003 , (LastModifiedDate - BMCServiceDesk__closeDateTime__c) &gt; -0.1 )) )</errorConditionFormula>
    <errorMessage>This task is closed. Reopen the task to modify it.</errorMessage>
</ValidationRule>