force-app/main/default/objects/BMCServiceDesk__Task__c/validationRules/BMCServiceDesk__dueDateMustBeAfterOpenedDate.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__dueDateMustBeAfterOpenedDate</fullName>
    <active>true</active>
    <description>The Due Date must be later than the Opened Date</description>
    <errorConditionFormula>AND(NOT(OR(ISNULL(BMCServiceDesk__dueDateTime__c),ISBLANK(BMCServiceDesk__dueDateTime__c) ) ),NOT(ISCHANGED( BMCServiceDesk__openDateTime__c ) ), BMCServiceDesk__dueDateTime__c &lt; BMCServiceDesk__openDateTime__c  )</errorConditionFormula>
    <errorMessage>The Due Date must be later than the Opened Date</errorMessage>
</ValidationRule>