force-app/main/default/objects/BMCServiceDesk__Task__c/validationRules/Description_field_cannot_be_modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_field_cannot_be_modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( ISNEW() ), 
    ISCHANGED( BMCServiceDesk__taskDescription__c ) 
)</errorConditionFormula>
    <errorMessage>Description field cannot be modified.</errorMessage>
</ValidationRule>