force-app/main/default/objects/BMCServiceDesk__Task__c/listViews/Applications_Task.listView-meta.xml
<ListView>
    <fullName>Applications_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Applications</label>
    <queue>Applications</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>