force-app/main/default/objects/BMCServiceDesk__Task__c/listViews/BMCServiceDesk__Remedyforce_Task_View.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__Remedyforce_Task_View</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__FKPriority__c</columns>
    <columns>BMCServiceDesk__taskDescription__c</columns>
    <columns>BMCServiceDesk__Client_ID__c</columns>
    <columns>BMCServiceDesk__Client_Type__c</columns>
    <columns>BMCServiceDesk__Client_Name__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>BMCServiceDesk__state__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BMCServiceDesk__inactive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Remedyforce Task View</label>
    <language>en_US</language>
</ListView>