force-app/main/default/objects/BMCServiceDesk__Task__c/listViews/Service_Desk_Task.listView-meta.xml
<ListView>
    <fullName>Service_Desk_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>Service Desk - CA</label>
    <queue>Service_Desk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>